# react-native-filament

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  bunfig.toml  package.json  react-native-filament.podspec  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build-android.yml  build-ios.yml  deploy-docs.yml  test-deploy-docs.yml  validate-cpp.yml  validate-js.yml
android/: build.gradle
docs/: docusaurus.config.ts  package.json  physics.md  sidebars.ts
docs/docs/guides/: ANIMATOR.mdx  ASSET_LOADING.mdx  CAMERA.mdx  GETTING_STARTED.mdx  IMAGES.mdx  INSTANCING.mdx  LIGHT.mdx  PHYSICS.mdx  REANIMATED.mdx  SKYBOX.mdx  TRANSFORMATION.mdx  TRANSOFMATION.mdx
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
docs/static/demos/: helmet.html
example/: package.json
example/android/app/: build.gradle
example/ios/: File.swift  Podfile
example/ios/FilamentExample/: AppDelegate.mm  Info.plist
example/ios/FilamentExample.xcodeproj/: project.pbxproj
examples/AppExampleFabric/: assets  babel.config.js  index.js  metro.config.js  package.json  react-native.config.js  tsconfig.json
examples/AppExampleFabric/scripts/: compile-materials.sh
examples/ExpoExample/: app.json  assets  babel.config.js  index.ts  metro.config.js  package.json  tsconfig.json
examples/Shared/: package.json  tsconfig.json
examples/Shared/assets/: background_image.filamat  coin_with_alpha.glb  transparent_shadow_material.filamat
examples/Shared/src/: AnimatedRotate.tsx  AnimatedRotateSharedValues.tsx  AnimationTransitions.tsx  AnimationTransitionsRecording.tsx  App.tsx  CastShadow.tsx  ChangeMaterials.tsx  FadeOut.tsx  FrustumCulling.tsx  ImageExample.tsx  ModelErrorHandling.tsx  MorphTargets.tsx  MultipleInstances.tsx  NoneTransparent.tsx  ReanimatedRotation.tsx  ScaleEffect.tsx  SkyboxExample.tsx  config.ts  useCoin.tsx
ios/: FilamentView.h
package/: .eslintrc.js  .gitignore  .prettierrc.js  filament_animator_feat.patch  filament_animator_patch_new.patch  filament_depth_clip_mode.patch  filament_ios_simulator.patch  filament_material_instance_getter.patch  filamet_animator_feat.patch  nitro.json  package.json  react-native-filament.podspec  react-native.config.js  test.filamat  tsconfig.json
package/android/: CMakeLists.txt  build.gradle  gradle.properties
package/android/libs/filament/include/filament/: Camera.h  TransformManager.h
package/android/libs/filament/include/gltfio/: Animator.h  AssetLoader.h
package/android/libs/filament/include/gltfio/materials/: uberarchive.h
package/android/libs/filament/include/utils/: FixedCapacityVector.h
package/android/src/main/: AndroidManifest.xml
package/android/src/main/cpp/: AndroidFilamentProxy.cpp  AndroidFilamentProxy.h  AndroidLogger.cpp  AndroidManagedBuffer.h  AndroidSurface.cpp  AndroidSurface.h  Filament.cpp  FilamentInstaller.cpp  FilamentInstaller.h  JNISharedPtr.cpp  JNISharedPtr.h  RNFAndroidFilamentProxy.cpp  RNFAndroidFilamentProxy.h  RNFAndroidLogger.cpp  RNFAndroidManagedBuffer.h  RNFAndroidSurface.cpp  RNFAndroidSurface.h  RNFFilament.cpp  RNFFilamentInstaller.cpp  RNFFilamentInstaller.h  RNFJNISharedPtr.cpp  RNFWithJNIScope.h  WithJNIScope.h
package/android/src/main/cpp/java-bindings/: JChoreographer.cpp  JChoreographer.h  JDispatcher.cpp  JDispatcher.h  JFilamentProxy.cpp  JFilamentProxy.h  JFilamentRecorder.cpp  JFilamentRecorder.h  JFilamentView.cpp  JFilamentView.h  JSurfaceProvider.cpp  JSurfaceProvider.h  RNFJChoreographer.cpp  RNFJChoreographer.h  RNFJDispatcher.cpp  RNFJDispatcher.h  RNFJFilamentProxy.cpp  RNFJFilamentProxy.h  RNFJFilamentRecorder.cpp  RNFJFilamentRecorder.h  RNFJFilamentView.cpp  RNFJFilamentView.h  RNFJSurfaceProvider.cpp  RNFJSurfaceProvider.h
package/android/src/main/java/com/margelo/filament/: Dispatcher.java  FilamentChoreographer.java  FilamentInstaller.java  FilamentModule.java  FilamentModuleImpl.java  FilamentProxy.java  FilamentRecorder.java  FilamentView.java  FilamentViewManager.java  FilamentViewManagerSpec.java  FilamentViewPackage.java  FilamentViewReadyEvent.java  FilamentViewSurfaceCreatedEvent.java  LooperExecutor.java  SurfaceProvider.java
package/android/src/newarch/: FilamentViewManagerSpec.java
package/android/src/newarch/com/margelo/filament/: FilamentModule.java  FilamentViewManager.java
package/android/src/oldarch/: FilamentViewManagerSpec.java
package/android/src/oldarch/com/margelo/filament/: FilamentModule.java  FilamentViewManager.java
package/cpp/: Choreographer.cpp  Choreographer.h  ChoreographerWrapper.cpp  ChoreographerWrapper.h  Dispatcher.cpp  Dispatcher.h  FilamentBuffer.h  FilamentProxy.cpp  FilamentProxy.h  FilamentRecorder.cpp  FilamentRecorder.h  FilamentView.cpp  FilamentView.h  JSDispatchQueue.h  Listener.cpp  Listener.h  ListenerManager.h  Logger.h  ManagedBuffer.h  MutableRawBuffer.cpp  MutableRawBuffer.h  RNFChoreographer.cpp  RNFChoreographer.h  RNFChoreographerWrapper.cpp  RNFChoreographerWrapper.h  RNFFilamentBuffer.h  RNFFilamentProxy.cpp  RNFFilamentProxy.h  RNFFilamentRecorder.cpp  RNFFilamentRecorder.h  RNFFilamentView.cpp  RNFFilamentView.h  RNFListener.cpp  RNFListener.h  RNFListenerManager.h  RNFLogger.h  RNFManagedBuffer.h  RNFReferences.h  RNFSurface.cpp  RNFSurface.h  (+7 more)
package/cpp/bullet/: ActivationStateEnum.h  BoxShapeWrapper.h  BulletWrapper.cpp  BulletWrapper.h  (+26 more)
package/docs/: engine-info.md
package/example/: README.md  app.json  babel.config.js  index.js  metro.config.js  package.json  react-native.config.js  tsconfig.json
package/ios/: AppleFilamentProxy.h  AppleFilamentProxy.mm  FilamentInstaller.h  FilamentInstaller.mm  FilamentView.mm  FilamentViewManager.mm  Utils.m
package/scripts/: BulletAndroid.mk  BulletAndroidApplication.mk  build-bullet3.sh  build-filament.sh  check-all.sh  clang-format.sh  copy-bullet3.sh  setup-filament-quick.sh
package/src/: ErrorUtils.ts  Filament.tsx  FilamentContext.tsx  FilamentProxy.ts  FilamentView.tsx  FilamentViewNativeComponent.ts  WorkletRuntime.ts  index.tsx
patches/: react-native-worklets-core+1.6.2.patch
src/: index.tsx
(+692 files in other folders)
